<resources>
    <string name="app_name">米你箱</string>
    <string name="common_hint_network_error">请求失败，请检查网络</string>
    <string name="common_hint_open_camera_error">打开摄像头失败，请检查权限或摄像头是否已被占用</string>
    <string name="common_hint_error_password">手机号或密码错误</string>
    <string name="common_hint_error_account">手机号未注册</string>
    <string name="common_hint_error_nickname_length">昵称长度应为%1$d-%2$d位</string>
    <string name="common_hint_error_phone_number">请输入正确的手机号</string>
    <string name="common_hint_error_password_length">密码长度应为%1$d-%2$d位</string>
    <string name="common_hint_error_verification_code">验证码不正确</string>
    <string name="common_hint_error_empty_char">昵称中不能有空字符</string>
    <string name="common_hint_error_number_start">昵称不能以数字开头</string>
    <string name="common_hint_error_get_code_fail">获取验证码失败</string>
    <string name="common_hint_error_make_call_fail">拨打电话失败，您可以选择手动拨打：</string>
    <string name="common_hint_request_location">为了更好的为您服务需要获取您的位置信息</string>
    <string name="common_hint_request_call">此操作需要先获取拨打电话的权限</string>
    <string name="common_hint_request_camera">此操作需要先获取您的相机权限</string>
    <string name="common_hint_request_storage">此操作需要先获取访问您存储空间的权限</string>
    <string name="common_error_open_album_fail">需要您的存储权限才能访问哟~</string>

    <string name="splash_introduce">拥有米箱，陪她共走远方\n锁住烦恼，和我嬉戏打闹</string>

    <string name="main_scan">扫一扫</string>
    <string name="main_my_box">我的箱子</string>
    <string name="main_user_detail">个人资料</string>
    <string name="main_discount">优惠卷</string>
    <string name="main_call_service">客服</string>
    <string name="main_transfer_box">箱间转运</string>
    <string name="main_charge">快速充电</string>
    <string name="main_settings">设置</string>
    <string name="main_hint_unlogin">点击登陆</string>
    <string name="main_hint_call_service">确定打电话给客服吗？</string>

    <string name="login_register">还没有账户?注册</string>
    <string name="login_login">登陆</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_hint_password">密码</string>
    <string name="login_hint_phone">手机号</string>
    <string name="login_register_hint">还没有账户?</string>
    <string name="login_register_hint2">注册</string>

    <string name="qrscan_title">二维码</string>

    <string name="register_hint_nickname">请输入昵称</string>
    <string name="register_hint_phone">请输入手机号</string>
    <string name="register_hint_pwd">请输入密码</string>
    <string name="register_title">注册</string>
    <string name="register_hint_code">请输入验证码</string>
    <string name="register_get_code">获取验证码</string>
    <string name="register_register_successful">注册成功</string>
    <string name="register_hint_error_default">注册失败，请检查网络</string>

    <string name="forget_pwd_title">重置密码</string>
    <string name="setting_title">设置</string>
    <string name="user_detail_default_email">未填写</string>
    <string name="user_detail_default_real_name">未实名</string>
    <string name="user_detail_use_time">使用次数</string>
    <string name="user_detail_credit">信誉</string>
    <string name="common_error_crop_image_fail">剪裁图片失败</string>
    <string name="main_search">搜索</string>
    <string name="main_hint_search">搜索地点</string>
    <string name="order_sure">确定</string>
    <string name="edit_info">修改资料</string>
    <string name="common_hint_error_email">请输入正确的email地址哦~</string>

    <string-array name="gender">
        <item>男</item>
        <item>女</item>
    </string-array>

    <string-array name="order_open_time">
        <item>15分钟</item>
        <item>30分钟</item>
        <item>45分钟</item>
        <item>1小时</item>
        <item>2小时</item>
        <item>3小时</item>
    </string-array>

    <string-array name="order_use_time">
        <item>1小时</item>
        <item>2小时</item>
        <item>3小时</item>
        <item>4小时</item>
        <item>5小时</item>
        <item>6小时</item>
    </string-array>

    <string-array name="order_box_type">
        <item>大</item>
        <item>小</item>
    </string-array>
</resources>
