<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/my_box"
        android:icon="@drawable/ic_main_my_box"
        android:title="@string/main_my_box" />

    <item
        android:id="@+id/user_detail"
        android:icon="@drawable/ic_main_user_detail"
        android:title="@string/main_user_detail" />

    <item
        android:id="@+id/discount"
        android:icon="@drawable/ic_main_discount"
        android:title="@string/main_discount" />

    <item
        android:id="@+id/call_service"
        android:icon="@drawable/ic_main_service"
        android:title="@string/main_call_service" />

    <item
        android:id="@+id/transfer_box"
        android:icon="@drawable/ic_main_transfer_box"
        android:title="@string/main_transfer_box" />

    <item
        android:id="@+id/quick_charge"
        android:icon="@drawable/ic_main_charge"
        android:title="@string/main_charge" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_main_setting"
        android:title="@string/main_settings" />
</menu>