<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jay86.minibox.ui.activity.login.LoginActivity"
    tools:ignore="ContentDescription">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_gradient_primary"
        android:fitsSystemWindows="true"
        app:layout_dodgeInsetEdges="bottom">

        <android.support.constraint.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.449" />

        <ImageView
            android:id="@+id/bgBottom"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/bg_login_bottom" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="133dp"
            android:layout_height="133dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@+id/bgBottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.243"
            app:srcCompat="@drawable/login_logo" />

        <LinearLayout
            android:id="@+id/toRegisterLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_register_hint"
                android:textColor="@color/ColorLoginRegisterHint"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_register_hint2"
                android:textColor="@color/colorLoginRegisterHint2"
                android:textSize="15sp" />
        </LinearLayout>

        <Button
            android:id="@+id/loginView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="21dp"
            android:layout_marginStart="21dp"
            android:background="@color/colorLoginButton"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/login_login"
            android:textColor="@color/colorLoginButtonText"
            app:layout_constraintBottom_toTopOf="@+id/toRegisterLayout"
            app:layout_constraintDimensionRatio="6.307"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/passwordView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="21dp"
            android:background="@null"
            android:drawablePadding="19dp"
            android:drawableStart="@drawable/ic_login_pwd"
            android:hint="@string/login_hint_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="@integer/max_password_length"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/forgetPasswordView"
            app:layout_constraintEnd_toStartOf="@+id/forgetPasswordView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/forgetPasswordView" />

        <TextView
            android:id="@+id/forgetPasswordView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28dp"
            android:text="@string/login_forget_password"
            android:textColor="@color/colorLoginForgetPassword"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/loginView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bgBottom"
            app:layout_constraintVertical_bias="0.632" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="14dp"
            android:background="@color/colorLoginDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordView" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/accountView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:background="@null"
            android:drawablePadding="19dp"
            android:drawableStart="@drawable/ic_login_account"
            android:hint="@string/login_hint_phone"
            android:inputType="phone"
            android:maxLength="@integer/max_phone_length"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@id/passwordView"
            app:layout_constraintEnd_toEndOf="@+id/forgetPasswordView"
            app:layout_constraintStart_toStartOf="@+id/passwordView" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="14dp"
            android:background="@color/colorLoginDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accountView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordView">

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="同意" />

            <TextView
                android:id="@+id/needToKnow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="《米你箱用户服务协议》"
                android:textColor="@color/colorLoginRegisterHint2" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>