<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_gradient_primary"
    android:fitsSystemWindows="true"
    tools:context="com.jay86.minibox.ui.activity.user.RegisterActivity">

    <include
        layout="@layout/toolbar_common"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.261" />

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_login_bottom"
            app:layout_dodgeInsetEdges="bottom">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingEnd="3dp"
                android:paddingStart="10dp"
                android:paddingTop="45dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@null"
                    android:drawablePadding="19dp"
                    android:drawableStart="@drawable/ic_register_nickname"
                    android:hint="@string/register_hint_nickname"
                    android:imeOptions="actionNext"
                    android:maxLength="@integer/max_username_length"
                    android:singleLine="true"
                    android:textColor="@color/colorRegisterForm"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="12dp"
                    android:background="@color/colorLoginDivider" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@null"
                    android:drawablePadding="19dp"
                    android:drawableStart="@drawable/ic_register_phone"
                    android:hint="@string/register_hint_phone"
                    android:inputType="phone"
                    android:maxLength="@integer/max_phone_length"
                    android:textColor="@color/colorRegisterForm"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="12dp"
                    android:background="@color/colorLoginDivider" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@null"
                    android:drawablePadding="19dp"
                    android:drawableStart="@drawable/ic_register_pwd"
                    android:hint="@string/register_hint_pwd"
                    android:inputType="textPassword"
                    android:maxLength="@integer/max_password_length"
                    android:textColor="@color/colorRegisterForm"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="12dp"
                    android:background="@color/colorLoginDivider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="21dp"
                        android:src="@drawable/ic_register_gender" />

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/gender"
                        android:textColor="@color/colorRegisterForm" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="12dp"
                    android:background="@color/colorLoginDivider" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="16dp"
                        android:layout_toStartOf="@+id/getCode"
                        android:background="@null"
                        android:drawablePadding="19dp"
                        android:drawableStart="@drawable/ic_register_code"
                        android:hint="@string/register_hint_code"
                        android:inputType="number"
                        android:maxLength="@integer/verification_code_length"
                        android:textColor="@color/colorRegisterForm"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/getCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/shape_rectangle_grey"
                        android:padding="8dp"
                        android:text="@string/register_get_code"
                        android:textColor="@color/colorRegisterForm"
                        android:textSize="12sp" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="60dp"
                    android:layout_marginTop="12dp"
                    android:background="@color/colorLoginDivider" />

                <Button
                    android:id="@+id/register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="22dp"
                    android:layout_marginStart="15dp"
                    android:background="@color/colorRegisterButton"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/register_title"
                    android:textColor="@color/colorRegisterButtonText"
                    android:textSize="18sp" />
            </LinearLayout>
        </ScrollView>
    </android.support.design.widget.CoordinatorLayout>
</android.support.constraint.ConstraintLayout>
